feat(home/emacs): size up headings

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -481,12 +481,12 @@ Reduce fringe size on the right (left is used for various indicators).
   (require 'ef-themes)
 
   (setopt ef-themes-mixed-fonts t
-          ef-themes-headings '((0 1.5)
-                               (1 variable-pitch light 1.3)
-                               (2 variable-pitch light 1.3)
+          ef-themes-headings '((0 1.8)
+                               (1 variable-pitch light 1.5)
+                               (2 variable-pitch light 1.4)
                                (3 variable-pitch light 1.3)
-                               (4 variable-pitch light 1.3)
-                               (t variable-pitch light)))
+                               (4 variable-pitch light 1.2)
+                               (t variable-pitch light 1.1)))
 
   (ef-themes-load-theme 'ef-owl)
 #+end_src
