feat(home/emacs): re-add org-ellipsis styling
Now that we're not using the fold style for org-modern anymore ¯\_(ツ)_/¯.

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1727,7 +1727,7 @@ Ah, the crown jewel of Emacs 👑.
             org-startup-indented                   t
             org-indent-indentation-per-level       0
             org-startup-folded                     'content
-            org-ellipsis                           " "
+            org-ellipsis                           " ▼"
             org-pretty-entities                    t
             org-log-done                           'note
             org-log-into-drawer                    t
@@ -1770,7 +1770,9 @@ Ah, the crown jewel of Emacs 👑.
             org-refile-targets     '((nil :maxlevel . 2)
                                      (org-agenda-files :maxlevel . 2)))
     (custom-set-faces
-     `(org-headline-done ((t :inherit nil
+     '(org-ellipsis      ((t :height 0.8
+                             :inherit shadow)))
+     '(org-headline-done ((t :inherit nil
                              :italic t
                              :strike-through t)))))
 #+end_src
