fix(home/emacs): don't go to headline 50 when calculating indents
There's actually a bug in the upstream implementation of `org-indent` where
if you create a headline with 50+ stars (maximum as given by
`org-indent--deepest-level`) it crashes because there's no error handling for
that case 🗿. So, don't do it.

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2013,7 +2013,7 @@ This is a highly custom and probably fragile setup for ~org-indent~ that uses pi
         (org-mode)
         (org-modern-mode)
         (cl-coerce
-         (cl-loop for i upto org-indent--deepest-level
+         (cl-loop for i below org-indent--deepest-level
                   for current = (progn
                                   (erase-buffer)
                                   (insert (concat (make-string i ?*) " "))
