refactor(home/emacs): use buffer-text-pixel-size for org-indent
I think this has a bit less overhead since I already have the text in an
otherwise-empty buffer (`string-pixel-width` uses this internally anyway).

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2018,7 +2018,7 @@ This is a highly custom and probably fragile setup for ~org-indent~ that uses pi
                                   (erase-buffer)
                                   (insert (concat (make-string i ?*) " "))
                                   (font-lock-ensure)
-                                  (string-pixel-width (buffer-string)))
+                                  (car (buffer-text-pixel-size)))
                   for running = 0 then (+ running current)
                   collect running)
          'vector))
