feat(home/emacs): tweak org-modern star symbols (again)

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1984,7 +1984,7 @@ Make Org Mode pretty! Star replacement symbols are taken from [[https://github.c
                               (?* . "•"))
             org-modern-progress 8
             org-modern-star 'replace
-            org-modern-replace-stars "∯∮∇σ𝛼∞𝜺"
+            org-modern-replace-stars "§∯δσ𝛼∞𝜺"
             ;; For some reason, inheriting from `org-modern-todo' messes with the size
             org-modern-todo-faces (ef-themes-with-colors
                                     `(("CANCELED"
