feat(home/emacs): use meow-insert-mode as predicate for CaP in org

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1798,9 +1798,9 @@ Ah, the crown jewel of Emacs 👑.
 ** Completion
 #+begin_src elisp
   (defun my/org-maybe-completion-at-point ()
-    "Call `completion-at-point' if point is at the end of the line."
+    "Call `completion-at-point' if in Meow insert mode."
     (interactive)
-    (when (eolp)
+    (when (meow-insert-mode-p)
       (call-interactively #'completion-at-point)))
 
   (add-hook 'org-tab-first-hook #'my/org-maybe-completion-at-point)
