--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2139,7 +2139,7 @@ Automatically toggles certain markers on and off depending on whether they're be
 ** Auto Tangling
 #+begin_src elisp
   (add-to-list 'safe-local-variable-values
-               '(eval . (add-hook 'after-save-hook #'org-babel-tangle)))
+               '(eval . (add-hook 'after-save-hook #'org-babel-tangle nil t)))
 #+end_src
 
 ** Table of Contents
@@ -2854,5 +2854,5 @@ Passing the image data directly to [[help:call-process-region][call-process-regi
 #+end_src
 
 # Local Variables:
-# eval: (add-hook 'after-save-hook #'org-babel-tangle)
+# eval: (add-hook 'after-save-hook #'org-babel-tangle nil t)
 # End:
