refactor(home/emacs): make my/private use &rest argument
Pointless, but I just like this better 🙃.

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -142,7 +142,7 @@ There's personal information that I'd rather not be in my public dotfiles, so th
 
 Convenience function to access nested elements.
 #+begin_src elisp
-  (defun my/private (keys)
+  (defun my/private (&rest keys)
     "Return value of `my/private' by recursively following KEYS."
     (map-nested-elt my/private keys))
 #+end_src
@@ -1097,7 +1097,7 @@ Custom URLs to access my various accounts. Authentication is managed via custom 
     (add-to-list 'magit-clone-name-alist 
                  `("\\`\\(?:cb-skissue:\\)?\\([^:]+\\)\\'" "cb-skissue" "skissue"))
     (add-to-list 'magit-clone-name-alist 
-                 `("\\`\\(?:work:\\)?\\([^:]+\\)\\'" "gh-work" ,(my/private '(user work)))))
+                 `("\\`\\(?:work:\\)?\\([^:]+\\)\\'" "gh-work" ,(my/private 'user 'work))))
 #+end_src
 
 #+begin_src elisp
@@ -2576,7 +2576,7 @@ Add a function to publish ~geo:~ links as URLs that lead to OpenStreetMap's webs
             mu4e-context-policy 'pick-first
             mu4e-contexts
             `(,(make-mu4e-context
-                :name (my/private '(user public))
+                :name (my/private 'user 'public)
                 :match-func
                 (lambda (msg)
                   (and msg
@@ -2584,19 +2584,19 @@ Add a function to publish ~geo:~ links as URLs that lead to OpenStreetMap's webs
                         (lambda (email)
                           (string-match-p
                            (rx "@"
-                               (literal (my/private '(domain public)))
+                               (literal (my/private 'domain 'public))
                                string-end)
                            email))
                         (append (mu4e-message-field msg :to)
                                 (mu4e-message-field msg :from))
                         :key (lambda (x) (plist-get x :email)))))
-                :vars `((user-mail-address . ,(my/private '(email public)))
+                :vars `((user-mail-address . ,(my/private 'email 'public))
                         (user-full-name . "Ad")
                         (mu4e-sent-folder . "/mailbox/Sent")
                         (mu4e-drafts-folder . "/mailbox/Drafts")
                         (mu4e-trash-folder . "/mailbox/Trash")))
               ,(make-mu4e-context
-                :name (my/private '(user personal))
+                :name (my/private 'user 'personal)
                 :match-func
                 (lambda (msg)
                   (and msg
@@ -2604,14 +2604,14 @@ Add a function to publish ~geo:~ links as URLs that lead to OpenStreetMap's webs
                         (lambda (email)
                           (string-match-p
                            (rx "@"
-                               (literal (my/private '(domain personal)))
+                               (literal (my/private 'domain 'personal))
                                string-end)
                            email))
                         (append (mu4e-message-field msg :to)
                                 (mu4e-message-field msg :from))
                         :key (lambda (x) (plist-get x :email)))))
-                :vars `((user-mail-address . ,(my/private '(email personal)))
-                        (user-full-name . ,(my/private '(name)))
+                :vars `((user-mail-address . ,(my/private 'email 'personal))
+                        (user-full-name . ,(my/private 'name))
                         (mu4e-sent-folder . "/mailbox/Sent")
                         (mu4e-drafts-folder . "/mailbox/Drafts")
                         (mu4e-trash-folder . "/mailbox/Trash"))))))
@@ -2628,8 +2628,8 @@ I have some catch-all aliases set up, so, when replying, I always want to use th
                                (lambda (email)
                                  (string-match-p
                                   (rx "@"
-                                      (or (literal (my/private '(domain public)))
-                                          (literal (my/private '(domain personal))))
+                                      (or (literal (my/private 'domain 'public))
+                                          (literal (my/private 'domain 'personal)))
                                       string-end)
                                   email))
                                parent-to
