--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -717,7 +717,7 @@ Buffer management keys.
    '("x" . meow-swap-grab)
    '("X" . meow-pop-selection)
    '("y" . meow-save)
-   '("z" . meow-pop-to-global-mark)
+   '("z" . meow-pop-to-mark)
    '("Z" . meow-unpop-to-mark)
    '("'" . repeat)
    '(";" . meow-reverse)
