fix(home/emacs): wait till org is loaded for helpful integration
Since `org-link-set-parameters` isn't defined until then.

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1009,7 +1009,7 @@ Wrap Eglot to ensure that completions aren't cached (since LSPs usually don't re
               display-buffer-alist
               :test #'equal)
 
-  (after! helpful
+  (after! (helpful org)
     (defun my/org-help-link-make-nicer ()
       "Add an :insert-description property to \"help\" links in Org that
   uses the symbol name as the default description, as well as a
