feat(home/emacs): force-autoload vertico

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -818,37 +818,51 @@ Integrates Avy with [[*Embark][Embark]] (taken from [[https://karthinks.com/soft
 
 * Completion
 ** Vertico
+Force autoload using ~el-patch~. This also allows delaying the load of [[*Marginalia][Marginalia]].
 #+begin_src elisp
-  (require 'vertico)
+  (autoload #'vertico--advice "vertico")
 
-  (add-hook 'minibuffer-setup-hook #'vertico-repeat-save)
-  (add-hook 'rfn-eshadow-update-overlay-hook #'vertico-directory-tidy)
-
-  (bind-keys ("M-S-s" . vertico-suspend)
-             ("M-S-r" . vertico-repeat)
-             :map vertico-map
-             ("RET" . vertico-directory-enter)
-             ("DEL" . vertico-directory-delete-char)
-             ("M-DEL" . vertico-directory-delete-word)
-             ("M-q" . vertico-quick-jump)
-             ("M-P" . vertico-repeat-previous)
-             ("M-N" . vertico-repeat-next))
-
-  (setopt vertico-count 20
-          vertico-cycle t
-          vertico-resize nil
-          vertico-quick1 "arstneio"
-          vertico-quick2 vertico-quick1)
+  (el-patch-define-minor-mode vertico-mode
+    "VERTical Interactive COmpletion."
+    :global t :group 'vertico
+    (dolist (fun '(completing-read-default completing-read-multiple))
+      (if vertico-mode
+          (advice-add fun :around #'vertico--advice)
+        (advice-remove fun #'vertico--advice))))
 
   (vertico-mode)
 #+end_src
 
+Configuration, with ~vertico-quick~, ~vertico-suspend~, ~vertico-repeat~, and ~vertico-directory~ extensions.
+#+begin_src elisp
+  (after! vertico
+    (add-hook 'minibuffer-setup-hook #'vertico-repeat-save)
+    (add-hook 'rfn-eshadow-update-overlay-hook #'vertico-directory-tidy)
+
+    (bind-keys ("M-S-s" . vertico-suspend)
+               ("M-S-r" . vertico-repeat)
+               :map vertico-map
+               ("RET" . vertico-directory-enter)
+               ("DEL" . vertico-directory-delete-char)
+               ("M-DEL" . vertico-directory-delete-word)
+               ("M-q" . vertico-quick-jump)
+               ("M-P" . vertico-repeat-previous)
+               ("M-N" . vertico-repeat-next))
+
+    (setopt vertico-count 20
+            vertico-cycle t
+            vertico-resize nil
+            vertico-quick1 "arstneio"
+            vertico-quick2 vertico-quick1))
+#+end_src
+
 Repeat map for candidate navigation.
 #+begin_src elisp
-  (defvar-keymap my/vertico-repeat-map
-    :repeat t
-    "n" #'vertico-next
-    "p" #'vertico-previous)
+  (after! vertico
+    (defvar-keymap my/vertico-repeat-map
+      :repeat t
+      "n" #'vertico-next
+      "p" #'vertico-previous))
 #+end_src
 
 ** Orderless
@@ -909,9 +923,9 @@ Repeat map for candidate navigation.
 
 ** Marginalia
 #+begin_src elisp
-  (require 'marginalia)
-  (bind-key "M-A" #'marginalia-cycle)
-  (marginalia-mode)
+  (after! vertico
+    (marginalia-mode)
+    (bind-key "M-A" #'marginalia-cycle))
 #+end_src
 
 ** Embark
