--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -72,7 +72,13 @@ Load only at compile time (I like a few of Common Lisp's macros 🙃).
 ~el-patch~ must be loaded during byte compilation for the macros, else errors occur when trying to use the byte-compiled file.
 #+begin_src elisp
   (eval-when-compile
-    (require 'el-patch))
+    (require 'el-patch)
+    
+    (el-patch-deftype defvar-keymap
+      :classify el-patch-classify-variable
+      :locate el-patch-locate-variable
+      :font-lock el-patch-fontify-as-variable
+      :declare ((indent defun))))
 #+end_src
 
 * Definitions
